--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <!-- Cuadro Comparativo -->
         <section class="mb-10 main-content bg-white p-6 rounded-lg">
-            <h2 class="text-2xl font-bold text-gray-800 mb-6 border-b pb-2">Cuadro Comparativo Conceptual (20 Compraciones)</h2>
+            <h2 class="text-2xl font-bold text-gray-800 mb-6 border-b pb-2">Cuadro Comparativo Conceptual (20 Comparaciones)</h2>
             <p class="text-sm text-gray-600 mb-4">Análisis de los efectos, ventajas y consecuencias de planificar y no planificar en el contexto educativo, basado en el texto de Contreras Bello (2011).</p>
             
             <div class="overflow-x-auto rounded-lg border border-gray-300">
@@ -153,3 +153,4 @@
     </main>
 </body>
 </html>
+
